# space-shape

./: .gitignore  CMakeLists.txt  README.md  angel.py  angel.yaml
Applications/: CMakeLists.txt
Applications/MergeXML/: CMakeLists.txt  SFind.h  SLearn.h  SMinimize.h  SNormalize.h  SProfiles.h  library.cpp  main.cpp
Applications/MergeXML/Commands/: Learn.cpp  Learn.h  Normalize.h  SLearn.cpp  SLearn.h  SNormalize.cpp  SNormalize.h
Applications/MergeXML/Profiles/: SProfileARXML.h  SProfileXDM.h
Applications/MergeXML/Resources/: ConnectionEditor.arxml
Applications/TranslateXML/: CMakeLists.txt  SExport.h  SFind.h  SImport.h  SProfiles.h  Translate.py  main.cpp
Space/: CMakeLists.txt
Space/Containers/: CMakeLists.txt  OrderMap.cmake  SBimap.h  SCircular.h  SNative.h  SVariable.h
Space/Converters/: CMakeLists.txt  Pugixml.cmake  SB64Convert.cpp  SB64Convert.h  SConvert.h  SConvertARG.cpp  SConvertARG.h  SConvertB64.cpp  SConvertB64.h  SConvertBIN.cpp  SConvertBIN.h  SConvertCSV.cpp  SConvertCSV.h  SConvertJSON.cpp  SConvertJSON.h  SConvertXML.cpp  SConvertXML.h  SConvertXML2.cpp  SConvertXML2.h  SCsvConvert.cpp  SCsvConvert.h  SJsonConvert.cpp  SJsonConvert.h  SXmlConvert.h
Space/Kernel/: CMakeLists.txt  OrderMap.cmake  SBimap.h  SKeys.h  SLog.cpp  SLog.h  STime.cpp  STime.h  STypes.h  SVariable.cpp  SVariable.h
Space/Resources/: CMakeLists.txt  SFile.cpp  SFile.h  SFileSystem.cpp  SFileSystem.h  SResource.cpp  SResource.h  SStream.cpp  SStream.h
Space/Resources/Linux/: SFileSystem.cpp
Space/Resources/Windows/: SFileSystem.cpp
Space/Streams/: CMakeLists.txt  SFileStream.h  SNullStream.h
Space/Tools/: CMakeLists.txt  SBasic.h  SEdit.cpp  SEdit.h  SLogic.cpp  SLogic.h  SMath.h  SPattern.cpp  SPattern.h  SRandom.h  SReshape.cpp  SReshape.h  SSearch.cpp  SSearch.h  SUtils.h  SVariant.h
Test/: CMakeLists.txt  GoogleTest.cmake
Test/Space/: CMakeLists.txt
Test/Space/Kernel/: TestVariable.cpp
Test/Space/Tools/: TestEdit.cpp  TestPattern.cpp
