cmake_minimum_required (VERSION 3.8)
# ---------------------------------------------------------
# Aplications
# ---------------------------------------------------------
# merge xml
add_subdirectory(MergeXML)
add_subdirectory(TranslateXML)
# ---------------------------------------------------------
# End
# ---------------------------------------------------------