cmake_minimum_required (VERSION 3.8)
# ---------------------------------------------------------
# project
# ---------------------------------------------------------
project (TranslateXml)
# ---------------------------------------------------------
# MergeXml target
# ---------------------------------------------------------
add_executable(TranslateXml 
	main.cpp
)
# dependencies 
target_link_libraries(TranslateXml
PRIVATE
	Space
)
# ---------------------------------------------------------
# End
# ---------------------------------------------------------