cmake_minimum_required (VERSION 3.8)
# ---------------------------------------------------------
# SpaceStream target
# ---------------------------------------------------------
add_library(SpaceStream INTERFACE)
# includes
target_include_directories(SpaceStream INTERFACE .)
# ---------------------------------------------------------
# End
# ---------------------------------------------------------